--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,16 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Config-Std
-version:      v0.0.4
-version_from: lib/Config/Std.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Config-Std
+version:             0.0.5
+abstract:            Load and save configuration files in a standard format
+license:             ~
+author:              
+    - Damian Conway <DCONWAY@cpan.org>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     Class::Std:                    0
     Test::More:                    0
     version:                       0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
