--- a/META.yml
+++ b/META.yml
@@ -1,39 +1,24 @@
 ---
-abstract: 'Load and save configuration files in a standard format'
+abstract: unknown
 author:
-  - 'Damian Conway <DCONWAY@cpan.org>'
-  - 'Bill Ricker <BRICKER@cpan.org>'
-  - 'Tom Metro <tmetro@cpan.org>'
+  - unknown
+build_requires:
+  ExtUtils::MakeMaker: 0
 configure_requires:
-  Module::Build: 0.36
-generated_by: 'Module::Build version 0.3603'
-license: perl
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
+license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Config-Std
-provides:
-  Config::Std:
-    file: lib/Config/Std.pm
-    version: 0.9
-  Config::Std::Block:
-    file: lib/Config/Std.pm
-  Config::Std::Comment:
-    file: lib/Config/Std.pm
-  Config::Std::Gap:
-    file: lib/Config/Std.pm
-  Config::Std::Hash:
-    file: lib/Config/Std.pm
-  Config::Std::Keyval:
-    file: lib/Config/Std.pm
-recommends:
-  Test::Distribution: 0
-  Test::Pod: 0
+no_index:
+  directory:
+    - t
+    - inc
 requires:
   Class::Std: 0
   Test::More: 0
-  perl: v5.7.3
   version: 0
-resources:
-  license: http://dev.perl.org/licenses/
-version: 0.9
+version: 0.901
